--- a/executive-message.html
+++ b/executive-message.html
@@ -161,7 +161,7 @@
     </div>
 
     <!----------------------------------------Footer------------------------------------ -->
-    <footer class="pt-5 pb-4 footer-bg">
+    <footer class="pt-5 pb-4 footer-bg ">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-4  mb-4">
@@ -177,18 +177,18 @@
                     <h5 class=" font-weight-bold text-dark mr-5">Useful Links</h5>
                     <div class="row mt-4">
                         <div class="col-12">
-                            <a href="#" class="text-decoration-none text-muted"> About Us</a>
+                            <a href="home.html" class="text-decoration-none text-muted"> Home</a>
                         </div>
                     </div>
 
                     <div class="row mt-2">
                         <div class="col-12">
-                            <a href="#" class="text-decoration-none text-muted"> Modules</a>
+                            <a href="potfolio.html" class="text-decoration-none text-muted"> Portfolio</a>
                         </div>
                     </div>
                     <div class="row mt-2">
                         <div class="col-12">
-                            <a href="#" class="text-decoration-none text-muted"> Features</a>
+                            <a href="blogs.html" class="text-decoration-none text-muted"> Blogs</a>
                         </div>
                     </div>
                     <div class="row mt-2">
@@ -198,12 +198,12 @@
                     </div>
                     <div class="row mt-2">
                         <div class="col-12">
-                            <a href="#" class="text-decoration-none text-muted"> FAQ's</a>
+                            <a href="services.html" class="text-decoration-none text-muted"> Services</a>
                         </div>
                     </div>
                     <div class="row mt-2">
                         <div class="col-12">
-                            <a href="#" class="text-decoration-none text-muted"> Contact</a>
+                            <a href="career.html" class="text-decoration-none text-muted"> Career</a>
                         </div>
                     </div>
                 </div>
@@ -247,9 +247,9 @@
                 </div>
                 <div class="col-md-6 ">
                     <div class="text-center text-white">
-                        | <a class="mr-3 ml-3 text-white" href="#">Privacy Policy</a> | <a href="#"
-                            class="mr-3 ml-3 text-white">About</a> | <a href="#" class="mr-3 ml-3 text-white">FAQ's</a>
-                        | <a class="ml-3 text-white" href="#">Contact Support</a>
+                        | <a class="mr-3 ml-3 text-white" href="#">Privacy Policy</a> | <a href="about.html"
+                            class="mr-3 ml-3 text-white">About</a> | <a href="about.html" class="mr-3 ml-3 text-white">FAQ's</a>
+                        | <a class="ml-3 text-white" href="contact.html">Contact Support</a>
                     </div>
                 </div>
             </div>
