--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link text-dark font-weight-bold mr-4" href="home.html">Home <span
+              <a class="nav-link text-dark font-weight-bold mr-4 active-tab" href="home.html">Home <span
                   class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -50,19 +50,21 @@
               <a class="nav-link text-dark font-weight-bold mr-4" href="career.html">Career</a>
             </li>
             <li class="nav-item">
-              <a class=" font-weight-bold mr-4 " href="contact.html"><button class="btn btn-nav mt-2">Contact</button></a>
+              <a class=" font-weight-bold mr-4 " href="contact.html"><button
+                  class="btn btn-nav mt-2">Contact</button></a>
             </li>
 
           </ul>
         </div>
       </nav>
     </div>
-    <div class="container top-position" >
+    <div class="container top-position">
       <div class="row justify-content-center">
         <div class="col-md-10">
           <div class="text-center">
             <h2 class="font-weight-bold text-uppercase">We're Oranje click</h2>
-            <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam commodi repellat quasi reiciendis non
+            <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam commodi repellat quasi
+              reiciendis non
               explicabo repellendus adipisci nisi porro ipsam vitae voluptates, delectus laboriosam voluptatem cumque
               unde recusandae placeat velit.</p>
             <button class="btn btn-read">Read more</button>
@@ -338,7 +340,8 @@
                 <div class="text-center">
                   <img src="images/mobile app development.png" class="img-fluid mt-3" width="100">
                   <h6 class="font-weight-bold text-uppercase mt-5">Mobile App development</h6>
-                  <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur consectetur
+                  <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+                    consectetur
                     nulla, </p>
                 </div>
               </div>
@@ -350,7 +353,8 @@
                 <div class="text-center">
                   <img src="images/web.png" class="img-fluid mt-3" width="100">
                   <h6 class="font-weight-bold text-uppercase mt-5">Web Development</h6>
-                  <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur consectetur
+                  <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+                    consectetur
                     nulla, </p>
                 </div>
               </div>
@@ -362,19 +366,20 @@
                 <div class="text-center">
                   <img src="images/seo.png" class="img-fluid mt-3" width="100">
                   <h6 class="font-weight-bold text-uppercase mt-5">Search Engine optimization</h6>
-                  <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur consectetur
+                  <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
+                    consectetur
                     nulla, </p>
                 </div>
               </div>
             </div>
           </div>
-  
+
         </div>
       </div>
       <div class="text-center">
         <img class="pb-4 mt-4" src="images/slider.png">
       </div>
-  
+
     </section>
   </section>
   <!-------------------------------------------------Our Team--------------------------------------  -->
@@ -534,9 +539,9 @@
       <div class="row mt-5 pb-5">
         <div class="col-md-6">
           <div class="left-center">
-          <img src="images/new logo-02.png" class="img-fluid" width="200">
-          <p class="text-muted mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aperiam laboriosam
-            sed vel corporis. Doloremque nesciunt obcaecati a </p>
+            <img src="images/new logo-02.png" class="img-fluid" width="200">
+            <p class="text-muted mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet aperiam laboriosam
+              sed vel corporis. Doloremque nesciunt obcaecati a </p>
           </div>
           <div class="row mt-3">
             <div class="col-1">
@@ -592,8 +597,8 @@
                 placeholder=" Feedback"></textarea>
             </div>
             <div class="left-center">
-            <button class="btn btn-send mt-5">Send</button>
-          </div>
+              <button class="btn btn-send mt-5">Send</button>
+            </div>
           </form>
         </div>
       </div>
@@ -626,64 +631,66 @@
       </div>
     </div>
   </div>
-<!-- -----------------------------------Floating Button--------------------------------------------- -->
+  <!-- -----------------------------------Floating Button--------------------------------------------- -->
   <div>
-    <a href="#" class="float-card text-decoration-none "  data-toggle="modal" data-target="#exampleModalCenter1">
+    <a href="#" class="float-card text-decoration-none " data-toggle="modal" data-target="#exampleModalCenter1">
 
-       <div class="bg-main p-0" style="border-radius:7px 0px 0px 7px;">
-         <h6 class="text-white pt-1" style="letter-spacing: 3px;">Contact us</h6>
-         <h6 class="text-white">for</h6>
-         <h6 class="text-white font-weight-bold pb-1" style="font-size: 14px;">Quote</h6>
+      <div class="bg-main p-0" style="border-radius:7px 0px 0px 7px;">
+        <h6 class="text-white pt-1" style="letter-spacing: 3px;">Contact us</h6>
+        <h6 class="text-white">for</h6>
+        <h6 class="text-white font-weight-bold pb-1" style="font-size: 14px;">Quote</h6>
 
-       </div>
+      </div>
     </a>
-</div>
+  </div>
 
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-body">
-        <h4 class="text-uppercase text-center mt-3 heading-size text-oranje">Fill In the detail below</h4>
-        <h5 class="text-muted text-center" style="font-size: 14px;">We will contact you right away</h5>
-        <form>
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog"
+    aria-labelledby="exampleModalCenterTitle1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-body">
+          <h4 class="text-uppercase text-center mt-3 heading-size text-oranje">Fill In the detail below</h4>
+          <h5 class="text-muted text-center" style="font-size: 14px;">We will contact you right away</h5>
+          <form>
             <div class="row">
-                <div class="col-md-12">
-                    <div class="form-group mt-3">
-                        <input type="text" class="form-control border-form" id="exampleInputName1"
-                            aria-describedby="emailHelp" placeholder="Name">
-                    </div>
-                    <div class="form-group mt-4">
-                        <input type="email" class="form-control border-form" id="exampleInputEmail1"
-                            placeholder="Email Address">
-                    </div>
-                    <div class="form-group mt-4">
-                        <input type="text" class="form-control border-form" id="exampleInputContact1"
-                            placeholder="Company name">
-                    </div>
-                    <div class="form-group mt-4">
-                      <input type="text" class="form-control border-form" id="exampleInputContact1"
-                          placeholder="Phone Number">
-                  </div>
-                  <div class="form-group mt-4">
-                    <textarea class="form-control border-form" id="exampleFormControlTextarea1" rows="1"  placeholder="Message"></textarea>
-                  </div>
+              <div class="col-md-12">
+                <div class="form-group mt-3">
+                  <input type="text" class="form-control border-form" id="exampleInputName1"
+                    aria-describedby="emailHelp" placeholder="Name">
                 </div>
+                <div class="form-group mt-4">
+                  <input type="email" class="form-control border-form" id="exampleInputEmail1"
+                    placeholder="Email Address">
+                </div>
+                <div class="form-group mt-4">
+                  <input type="text" class="form-control border-form" id="exampleInputContact1"
+                    placeholder="Company name">
+                </div>
+                <div class="form-group mt-4">
+                  <input type="text" class="form-control border-form" id="exampleInputContact1"
+                    placeholder="Phone Number">
+                </div>
+                <div class="form-group mt-4">
+                  <textarea class="form-control border-form" id="exampleFormControlTextarea1" rows="1"
+                    placeholder="Message"></textarea>
+                </div>
+              </div>
             </div>
             <div class="row mt-5">
-                <div class="col-md-12 ">
-                    <div class="text-center pb-2">
-                        <button class="btn btn-apply">Send</button>
+              <div class="col-md-12 ">
+                <div class="text-center pb-2">
+                  <button class="btn btn-apply">Send</button>
 
-                    </div>
                 </div>
+              </div>
             </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
   <!----------------------------------------Footer------------------------------------ -->
   <section class="copyright">
@@ -696,9 +703,9 @@
         </div>
         <div class="col-md-6 ">
           <div class="text-center text-white">
-            | <a class="mr-3 ml-3 text-white" href="#">Privacy Policy</a> | <a href="#"
-              class="mr-3 ml-3 text-white">About</a> | <a href="#" class="mr-3 ml-3 text-white">FAQ's</a> | <a
-              class="ml-3 text-white" href="#">Contact Support</a>
+            | <a class="mr-3 ml-3 text-white" href="#">Privacy Policy</a> | <a href="about.html"
+              class="mr-3 ml-3 text-white">About</a> | <a href="about.html" class="mr-3 ml-3 text-white">FAQ's</a> | <a
+              class="ml-3 text-white" href="contact.html">Contact Support</a>
           </div>
         </div>
       </div>
