--- a/team.html
+++ b/team.html
@@ -36,7 +36,7 @@
               <a class="nav-link text-dark font-weight-bold mr-4" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-dark font-weight-bold mr-4" href="team.html">Team</a>
+              <a class="nav-link text-dark font-weight-bold mr-4 active-tab" href="team.html">Team</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-dark font-weight-bold mr-4" href="potfolio.html">Portfolio</a>
@@ -90,51 +90,67 @@
       <div class="row mt-5 justify-content-center">
         <div class="col-md-11">
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 mt-4">
+              <div class="left-center">
               <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
               <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
               <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
             </div>
-            <div class="col-md-3">
+            </div>
+            <div class="col-md-3 mt-4">
+              <div class="left-center">
               <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
               <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
               <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
             </div>
-            <div class="col-md-3">
+            </div>
+            <div class="col-md-3 mt-4">
+              <div class="left-center">
               <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
               <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
               <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
             </div>
-            <div class="col-md-3">
+            </div>
+            <div class="col-md-3 mt-4">
+              <div class="left-center">
               <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
               <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
               <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
+            </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="row mt-5 justify-content-center">
+      <div class="row mt-5 mb-5 justify-content-center">
         <div class="col-md-11">
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 mt-4">
+              <div class="left-center">
               <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
               <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
               <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
             </div>
-            <div class="col-md-3">
+            </div>
+            <div class="col-md-3 mt-4">
+              <div class="left-center">
               <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
               <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
               <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
             </div>
-            <div class="col-md-3">
+            </div>
+            <div class="col-md-3 mt-4">
+              <div class="left-center">
               <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
               <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
               <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
             </div>
-            <div class="col-md-3">
+            </div>
+            <div class="col-md-3 mt-4">
+              <div class="left-center">
               <img src="images/BD.png" class="img-fluid" style="border-radius: 7px;">
               <h5 class="head-text text-uppercase mt-2">Suleyman Khan</h5>
               <h5 class="text-team-2 text-uppercase text-muted">Business developer/project manager</h5>
+            </div>
             </div>
           </div>
         </div>
@@ -386,100 +402,100 @@
       </div>
   </div>
   <!----------------------------------------Footer------------------------------------ -->
-  <footer class="pt-5 pb-4 footer-bg">
+  <footer class="pt-5 pb-4 footer-bg ">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-4  mb-4">
-          <img src="images/new logo-02.png" class="img-fluid" width="160">
-          <p class="mt-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae est
-            corporis
-            libero nemo quam reiciendis similique minima exercitationem inventore, labore architecto, illum
-            tempore
-            quisquam qui, quae at debitis temporibus quis.
-          </p>
-        </div>
-        <div class=" col-md-4 mt-3 mb-4">
-          <h5 class=" font-weight-bold text-dark mr-5">Useful Links</h5>
-          <div class="row mt-4">
-            <div class="col-12">
-              <a href="#" class="text-decoration-none text-muted"> About Us</a>
+        <div class="row justify-content-center">
+            <div class="col-md-4  mb-4">
+                <img src="images/new logo-02.png" class="img-fluid" width="160">
+                <p class="mt-4 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae est
+                    corporis
+                    libero nemo quam reiciendis similique minima exercitationem inventore, labore architecto, illum
+                    tempore
+                    quisquam qui, quae at debitis temporibus quis.
+                </p>
             </div>
-          </div>
+            <div class=" col-md-4 mt-3 mb-4">
+                <h5 class=" font-weight-bold text-dark mr-5">Useful Links</h5>
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <a href="home.html" class="text-decoration-none text-muted"> Home</a>
+                    </div>
+                </div>
 
-          <div class="row mt-2">
-            <div class="col-12">
-              <a href="#" class="text-decoration-none text-muted"> Modules</a>
+                <div class="row mt-2">
+                    <div class="col-12">
+                        <a href="potfolio.html" class="text-decoration-none text-muted"> Portfolio</a>
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-12">
+                        <a href="blogs.html" class="text-decoration-none text-muted"> Blogs</a>
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-12">
+                        <a href="executive-message.html" class="text-decoration-none text-muted"> Executive Message</a>
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-12">
+                        <a href="services.html" class="text-decoration-none text-muted"> Services</a>
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-12">
+                        <a href="career.html" class="text-decoration-none text-muted"> Career</a>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="row mt-2">
-            <div class="col-12">
-              <a href="#" class="text-decoration-none text-muted"> Features</a>
+            <div class=" col-md-4 mt-3 mb-4">
+                <h5 class="mb-4 font-weight-bold text-dark">Contact Detail</h5>
+                <div class="row pt-2">
+                    <div class="col-2 m-auto">
+                        <img src="images/map.png" width="40">
+                    </div>
+                    <div class="col-10 m-auto">
+                        <span class="text-muted"> Metrotech Center, Brooklyn, NY 11201, USA</span>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-2 m-auto">
+                        <img src="images/Group 46.png" width="40">
+                    </div>
+                    <div class="col-10 m-auto">
+                        <span class="text-muted">917-785-7462</span>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-2 m-auto">
+                        <img src="images/Group 47.png" width="40">
+                    </div>
+                    <div class="col-10 m-auto">
+                        <span class="text-muted"> support@birthxapp.com</span>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="row mt-2">
-            <div class="col-12">
-              <a href="executive-message.html" class="text-decoration-none text-muted"> Executive Message</a>
-            </div>
-          </div>
-          <div class="row mt-2">
-            <div class="col-12">
-              <a href="#" class="text-decoration-none text-muted"> FAQ's</a>
-            </div>
-          </div>
-          <div class="row mt-2">
-            <div class="col-12">
-              <a href="#" class="text-decoration-none text-muted"> Contact</a>
-            </div>
-          </div>
         </div>
-        <div class=" col-md-4 mt-3 mb-4">
-          <h5 class="mb-4 font-weight-bold text-dark">Contact Detail</h5>
-          <div class="row pt-2">
-            <div class="col-2 m-auto">
-              <img src="images/map.png" width="40">
-            </div>
-            <div class="col-10 m-auto">
-              <span class="text-muted"> Metrotech Center, Brooklyn, NY 11201, USA</span>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col-2 m-auto">
-              <img src="images/Group 46.png" width="40">
-            </div>
-            <div class="col-10 m-auto">
-              <span class="text-muted">917-785-7462</span>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col-2 m-auto">
-              <img src="images/Group 47.png" width="40">
-            </div>
-            <div class="col-10 m-auto">
-              <span class="text-muted"> support@birthxapp.com</span>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-  </footer>
-  <section class="copyright">
+</footer>
+<section class="copyright">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6 ">
-          <div class="text-center text-white">
-            Copyright @2020. All Rights Reserved. OranjeclickTM.
-          </div>
+        <div class="row">
+            <div class="col-md-6 ">
+                <div class="text-center text-white">
+                    Copyright @2020. All Rights Reserved. OranjeclickTM.
+                </div>
+            </div>
+            <div class="col-md-6 ">
+                <div class="text-center text-white">
+                    | <a class="mr-3 ml-3 text-white" href="#">Privacy Policy</a> | <a href="about.html"
+                        class="mr-3 ml-3 text-white">About</a> | <a href="about.html" class="mr-3 ml-3 text-white">FAQ's</a>
+                    | <a class="ml-3 text-white" href="contact.html">Contact Support</a>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6 ">
-          <div class="text-center text-white">
-            | <a class="mr-3 ml-3 text-white" href="#">Privacy Policy</a> | <a href="#"
-              class="mr-3 ml-3 text-white">About</a> | <a href="#" class="mr-3 ml-3 text-white">FAQ's</a>
-            | <a class="ml-3 text-white" href="#">Contact Support</a>
-          </div>
-        </div>
-      </div>
     </div>
-  </section>
+</section>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
