--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
                 <div class="col-md-10 ">
                     <div class="row pt-3 pb-3 bg-light">
                         <div class="col-1 m-auto">
-                                <span class="bg-main text-white p-1" style="border-radius: 50%;"> &nbsp;1&nbsp;</span>
+                                <span class="bg-main text-white center-class" style="border-radius: 50%; "> &nbsp;1&nbsp;</span>
                         </div>
                         <div class="col-11">
                             <span>What is cloud computing and how it is benefits for business</span>
@@ -257,7 +257,7 @@
                 <div class="col-md-10 ">
                     <div class="row pt-3 pb-3 bg-light">
                         <div class="col-1 m-auto">
-                                <span class="bg-main text-white p-1" style="border-radius: 50%;"> &nbsp;2&nbsp;</span>
+                                <span class="bg-main text-white center-class" style="border-radius: 50%;"> &nbsp;2&nbsp;</span>
                         </div>
                         <div class="col-11">
                             <span>What is cloud computing and how it is benefits for business</span>
@@ -271,7 +271,7 @@
                 <div class="col-md-10 ">
                     <div class="row pt-3 pb-3 bg-light">
                         <div class="col-1 m-auto">
-                                <span class="bg-main text-white p-1" style="border-radius: 50%;"> &nbsp;3&nbsp;</span>
+                                <span class="bg-main text-white center-class" style="border-radius: 50%;"> &nbsp;3&nbsp;</span>
                         </div>
                         <div class="col-11">
                             <span>What is cloud computing and how it is benefits for business</span>
@@ -285,7 +285,7 @@
                 <div class="col-md-10 ">
                     <div class="row pt-3 pb-3 bg-light">
                         <div class="col-1 m-auto">
-                                <span class="bg-main text-white p-1" style="border-radius: 50%;"> &nbsp;4&nbsp;</span>
+                                <span class="bg-main text-white center-class" style="border-radius: 50%;"> &nbsp;4&nbsp;</span>
                         </div>
                         <div class="col-11">
                             <span>What is cloud computing and how it is benefits for business</span>
@@ -299,7 +299,7 @@
                 <div class="col-md-10 ">
                     <div class="row pt-3 pb-3 bg-light">
                         <div class="col-1 m-auto">
-                                <span class="bg-main text-white p-1" style="border-radius: 50%;"> &nbsp;5&nbsp;</span>
+                                <span class="bg-main text-white center-class" style="border-radius: 50%;"> &nbsp;5&nbsp;</span>
                         </div>
                         <div class="col-11">
                             <span>What is cloud computing and how it is benefits for business</span>
