--- a/blogs.html
+++ b/blogs.html
@@ -74,7 +74,7 @@
   <section class="bg-blog">
     <div class="container pt-5">
       <div class="row pt-5 mb-5">
-        <div class="col-md-9">
+        <div class="col-xl-9">
           <div class="container">
             <div class="row shadow-card">
               <div class="col-md-6 p-0">
@@ -104,7 +104,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 ">
+        <div class="col-md-6 col-xl-3 mt-5 mt-md-5 mt-xl-0">
           <div class="container pt-3 shadow-card">
             <div class="row " style="border-left: 10px solid #ff9900 ;">
               <div class="col-12">
