--- a/career.html
+++ b/career.html
@@ -18,7 +18,7 @@
     <section class="career-section">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand img-full" href="#"><img class="img-fluid" src="images/new logo-02.png"
+                <a class="navbar-brand img-full" href="home.html"><img class="img-fluid" src="images/new logo-02.png"
                         width="160"> </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
