--- a/home.html
+++ b/home.html
@@ -77,8 +77,18 @@
   <div class="container img-margin">
     <div class="row justify-content-center ">
       <div class="col-md-10">
-        <div class="text-center">
-          <img src="images/laptop.png" class="img-fluid mt-5">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/laptop.png" class="img-fluid mt-5">
+            </div>
+            <div class="carousel-item">
+              <img src="images/laptop.png" class="img-fluid mt-5">
+            </div>
+            <div class="carousel-item">
+              <img src="images/laptop.png" class="img-fluid mt-5">
+            </div>
+          </div>
         </div>
       </div>
     </div>
